test relative paths

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
         var map = new mapboxgl.Map({
             container: 'map',
-            style: '/london-style.json',
+            style: 'london-style.json',
             center: [0.1278, 51.5074],
             pitch: 60,
             zoom: 10
