--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset='utf-8' />
     <title>OpenMapTiles OSM Bright style</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src="dist/threebox.js" type="text/javascript"></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
+    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
     <style>
         body { margin:0; padding:0; }
         #map { position:absolute; top:0; bottom:0; width:100%; }
@@ -21,7 +23,54 @@
             pitch: 60,
             zoom: 10
         });
+
+map.on('style.load', function() {
+    map.addLayer({
+        id: 'custom_layer',
+        type: 'custom',
+           onAdd: function(map, mbxContext){
+
+                window.threebox = new Threebox(map, mbxContext);
+                threebox.setupDefaultLights();
+
+                var loader = new THREE.GLTFLoader();
+
+                loader.load('authur.gltf', (function (gltf) {
+                    threebox.addAtCoordinate(gltf.scene, [ -0.1195,51.5033, 1]);
+
+                }).bind(this));
+
+            },
+
+        render: function(gl, matrix){
+            threebox.update(true);
+        }
+    });
+});
+
+// map.on('style.load', function() {
+//     map.addLayer({
+//         id: 'custom_layer',
+//         type: 'custom',
+//         onAdd: function(map, mbxContext){
+//             window.threebox = new Threebox(map, mbxContext);
+// 	    var lnglat = [-0.1195,51.5033, 1];
+//             threebox.setupDefaultLights();
+//             // initialize geometry and material of our cube object
+//             var geometry = new THREE.BoxGeometry(2000, 2000, 2000);
+//             var redMaterial = new THREE.MeshPhongMaterial( {
+//                 color: 0x660000,
+//                 side: THREE.DoubleSide
+//             });
+//             cube = new THREE.Mesh(geometry, redMaterial);
+//             threebox.addAtCoordinate(cube, lnglat);
+//         },
+//
+//         render: function(gl, matrix){
+//             threebox.update(true);
+//         }
+//     });
+// });
     </script>
 </body>
 </html>
-
