--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             style: 'london-style.json',
             center: [0.1278, 51.5074],
             pitch: 60,
-            zoom: 10
+            bearing: -60,
+            zoom: 15
         });
 
 map.on('style.load', function() {
